# careeros-forge

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  forge.json  pyproject.toml
.github/workflows/: tests.yml
src/careeros_forge/: cli.py  config.py  filesystem.py  generator.py
src/careeros_forge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/careeros_forge/templates/base/: CHANGELOG.md  CONTRIBUTING.md  README.md.j2  gitignore.template
src/careeros_forge/templates/docs/: ARCHITECTURE.md  ROADMAP.md
tests/: test_generator.py
