[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "careeros-forge"
version = "0.1.0"
requires-python = ">=3.11"

[project.scripts]
careeros-forge = "careeros_forge.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
