[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "careeros-forge"
version = "0.1.0"
description = "A modular project scaffolding tool for the CareerOS ecosystem."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Lucien Marcel Coté" }
]
license = { text = "MIT" }

[project.scripts]
careeros-forge = "careeros_forge.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]